# gobgift

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  Pipfile  README.md  conftest.py  docker-compose.yml  env.example  manage.py  package.json  production.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  shippable.yml  webpack.config.js
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
frontend/src/: App.vue  main.js
gobgift/: admin.py  autocomplete_light_registry.py  forms.py  models.py  settings.py  test_forms.py  test_models.py  test_views.py  urls.py  views.py  wsgi.py
gobgift/api/: apps.py  urls.py  views.py
gobgift/core/: apps.py  forms.py  serializers.py  views.py
gobgift/gifts/: apps.py  forms.py  models.py  serializers.py  urls.py  views.py
gobgift/groups/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
gobgift/migrations/: 0001_initial.py  0002_auto_20141110_0236.py  0003_auto_20141111_0043.py  0004_comment_datetime.py  0005_auto_20141120_0114.py  0006_listgroup.py  0007_auto_20150819_1356.py  0008_remove_listgroup_admins.py  0009_listgroup_owner.py  0010_liste_groups.py  0011_auto_20151019_0143.py  0012_auto_20151107_1034.py  0013_auto_20151129_1917.py
gobgift/templates/: _layout.html  app.html  createListe.html  create_edit_group.html  create_edit_groupuser.html  create_edit_list.html  create_group.html  deleteGift.html  deleteGroup.html  deleteGroupUser.html  deleteList.html  edit_group.html  grouplists.html  (+6 more)
gobgift_api/: serializers.py  urls.py  views.py
(+63 files in other folders)
